# web-rich-presence

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.MD  installer.nsi  types.d.ts  webrichpresence.types.ts
.github/workflows/: build.yml
src/: common.cpp  main.cpp  protocolreg.cpp  stringcutter.cpp
